package main

import (
	"context"
	"fmt"
	"math/rand"
	"sync"

	train "path-to-proto/train_ticket"
)

var (
	receipts     = make(map[string]*train.Receipt)
	sectionSeats = map[string][]string{
		"sectionA": {"A1", "A2", "A3"},
		"sectionB": {"B1", "B2", "B3"},
	}
	mu sync.Mutex
)

func (s *trainTicketService) PurchaseTicket(ctx context.Context, req *train.TicketRequest) (*train.Receipt, error) {
	// Implement the purchase logic here
}

func (s *trainTicketService) GetReceiptDetails(ctx context.Context, req *train.ReceiptRequest) (*train.Receipt, error) {
	// Implement the receipt details logic here
}

func (s *trainTicketService) ViewUserSeats(ctx context.Context, req *train.UserSeatsRequest) (*train.UserSeatsResponse, error) {
	// Implement the view user seats logic here
}

func (s *trainTicketService) RemoveUser(ctx context.Context, req *train.UserRequest) (*train.EmptyResponse, error) {
	// Implement the remove user logic here
}

func (s *trainTicketService) ModifyUserSeat(ctx context.Context, req *train.ModifyUserSeatRequest) (*train.Receipt, error) {
	// Implement the modify user seat logic here
}
